# singleton-key-value-storage

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  TaskFastAPI.py  alltest.sh  api.bat  example.1.basic.py  example.basic.py  example.google.py  index.html  longCodeRoom.json  longCodeRoom.py  pyproject.toml  sqlite.db  start_worker.py  test_task.py  testexample.py  users.py  visionRoom.gradiolite.html  visionRoom.js.html  visionRoom.json  visionRoom.py  worker.bat
SingletonKeyValueStorage/: BasicModel.py
SingletonKeyValueStorage/Storages/: AwsStorage.py  CouchStorage.py  FileSystemStorage.py  FirestoreStorage.py  MongoStorage.py  RedisStorage.py  SqliteStorage.py  Storage.py  TestStorage.py  __init__.py  rjson.py
SingletonStorage/: BasicModel.js  BasicModel.py  GUI.gradio.admin.py  GUI.gradio.user.py  LLMroom.py  LLMroomGradio.py  LLMstore.js  LLMstore.py  MachineModel.py  RESTapi.py  Storages.js  Storages.onlypy.py  Storages.py  TaskFastAPI.py  TaskModel.py  UserModel.py  UserRESTapi.py  __init__.py
SingletonStorage/Storages/: AwsStorage.py  FileSystemStorage.py  FirestoreStorage.py  MongoStorage.py  RedisStorage.py  SqliteStorage.py  Storage.py  TestStorage.py  __init__.py  utils.py
SingletonStorage/templates/: edit.html  home.html  login.html  register.html
cpp/: CMakeLists.txt
cpp/include/: InfInt.h  Storages.hpp  base64.hpp  rjson.hpp  uuid.h
cpp/src/: main.cpp
data/: test.html
data/templates/: edit.html  home.html  login.html
include/: InfInt.h  Storages.hpp  utils.hpp
js/: BasicModel.js  RSA.js  Storage.js  TestBasicModel.js  TestStorage.js  rjson.js
js/SingletonKeyValueStorage/: BasicModel.js  Storages.js
kotlin/: Storage.kt  TestStorage.kt  rjson.kt
python/: .gitignore  example.1.basic.py
python/SingletonKeyValueStorage/: __init__.py
python/SingletonKeyValueStorage/Storages/: AwsStorage.py  CouchStorage.py  RedisStorage.py  Storage.py  TestStorage.py
rust/: Cargo.toml
rust/src/: main.rs  mod.rs  rjson.rs  storage.rs
src/: basic_store.rs  main.cpp  main.rs  rsa.rs  singleton_storage.rs
tmp/: public_key.pem
ts/: BasicModel.ts  RSA.ts  Storage.ts  Storages.ts  TestBasicModel.ts  TestStorage.ts  package.json  rjson.ts  tsconfig.json
