[package]
name = "singleton_key_value_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
base64 = "0.22.1"
regex = "1"
flate2 = "1.0"
