[tool.poetry]
name = "singleton-key-value-storage"
version = "0.1.0"
description = "Python Singleton Key-Value Storage System supporting multiple backends."
authors = ["HUANGYI QINH <qinhunagyi@email.com>"]
license = "MIT"  # Adjust if your LICENSE file is a different license
readme = "README.md"
homepage = "https://github.com/qinhy/singleton-key-value-storage"
packages = [{ include = "SingletonKeyValueStorage" }]
keywords = ["singleton", "key-value", "storage", "multi-backend"]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "*"

[tool.poetry.extras]
redis = ["redis"]
firestore = ["google-cloud-firestore"]
aws = ["boto3", "botocore", "mypy-boto3-s3"]
mongo = ["pymongo"]
couch = ["requests"]
all = [
    "redis",
    "google-cloud-firestore",
    "boto3",
    "botocore",
    "mypy-boto3-s3",
    "pymongo",
    "requests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
