[project]
name = "singleton-key-value-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.26",
    "botocore>=1.40.26",
    "google-cloud-firestore>=2.21.0",
    "mypy-boto3-s3>=1.40.26",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
