
[package]
name = "singleton_key_value_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
wildmatch = "2"
anyhow = "1.0"
flate2 = "1.0"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
